--- a/wisata.html
+++ b/wisata.html
@@ -48,7 +48,7 @@
 
         <!--Button Pemesanan-->
         <div class="button-ticket">
-            <a href="#">
+            <a href="form_daftar.html">
                 <input type="button" value="Pesan Tiket" name="pesanTiket" id="pesanTiket">
             </a>
         </div>
