bikin form daftar

--- a/form_daftar.html
+++ b/form_daftar.html
@@ -30,14 +30,29 @@
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="#" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
+                <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
         </div>
     </div>
 
+    <!--Jumbotron-->
+    <div class="jumbotron-1"></div>
 
+    <div class="all">
+        <!--Urutan-->
+        <div class="judul">
+            <h1>Reservasi Tiket</h1>
+        </div>
+        <div class="list-nomor">
+            <ul>
+                <li class="active-nomor">Lihat Harga</li>
+                <li class="no-active-nomor">Pesan Tiket</li>
+                <li class="no-active-nomor">Selesai</li>
+            </ul>
+        </div>
+    </div>
 
     <!--Jquery-->
     <script>
