BANYAK BANGET COY YANG DIROMBAK

--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -29,8 +29,8 @@
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="#" class="link-navigation-1">Sejarah</a></li>
-                <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
+                <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
+                <li><a href="wisata.html" class="link-navigation-1-aktif">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
@@ -70,7 +70,7 @@
                         <div class="text-content-wisata">
                             <div class="tagg">
                                 <div class="tag-1">
-                                    <p>Sejarah</p>
+                                    <p>Wisata</p>
                                 </div>
                                 <div class="tag-2">
                                     <p>Kota Tua</p>
@@ -96,7 +96,7 @@
                         <div class="text-content-wisata">
                             <div class="tagg">
                                 <div class="tag-1">
-                                    <p>Sejarah</p>
+                                    <p>Wisata</p>
                                 </div>
                                 <div class="tag-2">
                                     <p>Kota Tua</p>
@@ -122,7 +122,7 @@
                         <div class="text-content-wisata">
                             <div class="tagg">
                                 <div class="tag-1">
-                                    <p>Sejarah</p>
+                                    <p>Wisata</p>
                                 </div>
                                 <div class="tag-2">
                                     <p>Kota Tua</p>
@@ -148,7 +148,7 @@
                         <div class="text-content-wisata">
                             <div class="tagg">
                                 <div class="tag-1">
-                                    <p>Sejarah</p>
+                                    <p>Wisata</p>
                                 </div>
                                 <div class="tag-2">
                                     <p>Kota Tua</p>
@@ -171,7 +171,7 @@
                     <h2>Tag Artikel ini:</h2>
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-1">
                             <p>Kota Tua</p>
