--- a/wisata.html
+++ b/wisata.html
@@ -29,8 +29,8 @@
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
                 <li><a href="#" class="link-navigation-1">Sejarah</a></li>
-                <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
+                <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
+                <li><a href="wisata.html" class="link-navigation-1-aktif">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
@@ -66,7 +66,7 @@
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-2">
                             <p>Kota Tua</p>
@@ -100,7 +100,7 @@
                     <div class="text-content-wisata">
                         <div class="tagg">
                             <div class="tag-1">
-                                <p>Sejarah</p>
+                                <p>Wisata</p>
                             </div>
                             <div class="tag-2">
                                 <p>Kota Tua</p>
@@ -134,7 +134,7 @@
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-2">
                             <p>Kota Tua</p>
@@ -168,7 +168,7 @@
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-2">
                             <p>Kota Tua</p>
@@ -204,7 +204,7 @@
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-2">
                             <p>Kota Tua</p>
@@ -238,7 +238,7 @@
                 <div class="text-content-wisata">
                     <div class="tagg">
                         <div class="tag-1">
-                            <p>Sejarah</p>
+                            <p>Wisata</p>
                         </div>
                         <div class="tag-2">
                             <p>Kota Tua</p>
