--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="nav-menu-1">
             <ul>
-                <li><a href="index.html" class="link-nav-1">Home</a></li>
+                <li><a href="index.html" class="link-nav-1-aktif">Home</a></li>
                 <li><a href="sejarah.html" class="link-nav-1">Sejarah</a></li>
                 <li><a href="#" class="link-nav-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-nav-1">Wisata</a></li>
