--- a/artikel_sejarah.html
+++ b/artikel_sejarah.html
@@ -28,9 +28,9 @@
         <div class="navigation-menu-1">
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
-                <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
-                <li><a href="#" class="link-navigation-1">Budaya</a></li>
-                <li><a href="wisata.html" class="link-navigation-1-wisata">Wisata</a></li>
+                <li><a href="sejarah.html" class="link-navigation-1-aktif">Sejarah</a></li>
+                <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
+                <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
                 <li><a href="#" class="link-navigation-1">Rute</a></li>
                 <li><a href="#" class="link-navigation-1">Kuliner</a></li>
             </ul>
@@ -63,7 +63,7 @@
                     <!--Content 1-->
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
-                            <a href="artikel_wisata.html">
+                            <a href="artikel_sejarah.html">
                                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
@@ -77,7 +77,7 @@
                                 </div>
                             </div>
                             <div class="judul-content">
-                                <a href="artikel_wisata.html">
+                                <a href="artikel_sejarah.html">
                                     <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                                 </a>
                             </div>
@@ -89,7 +89,7 @@
                     <!--Content 2-->
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
-                            <a href="artikel_wisata.html">
+                            <a href="artikel_sejarah.html">
                                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                             <div class="judul-content">
-                                <a href="artikel_wisata.html">
+                                <a href="artikel_sejarah.html">
                                     <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                                 </a>
                             </div>
@@ -115,7 +115,7 @@
                     <!--Content 3-->
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
-                            <a href="artikel_wisata.html">
+                            <a href="artikel_sejarah.html">
                                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                             <div class="judul-content">
-                                <a href="artikel_wisata.html">
+                                <a href="artikel_sejarah.html">
                                     <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                                 </a>
                             </div>
@@ -141,7 +141,7 @@
                     <!--Content 4-->
                     <div class="content-wisata">
                         <div class="picture-content-wisata">
-                            <a href="artikel_wisata.html">
+                            <a href="artikel_sejarah.html">
                                 <img src="../project_web_dasar/pict/Fatahillah.jpg" alt="fatahillah" srcset="">
                             </a>
                         </div>
@@ -155,7 +155,7 @@
                                 </div>
                             </div>
                             <div class="judul-content">
-                                <a href="artikel_wisata.html">
+                                <a href="artikel_sejarah.html">
                                     <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                                 </a>
                             </div>
