--- a/sejarah.html
+++ b/sejarah.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wisata</title>
+    <title>Sejarah</title>
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <!--CSS-->
@@ -46,20 +46,13 @@
             <h1 class="judul">SEJARAH JAKARTA</h1>
         </div>
 
-        <!-- Button Pemesanan
-        <div class="button-ticket">
-            <a href="form_daftar.html">
-                <input type="button" value="Pesan Tiket" name="pesanTiket" id="pesanTiket">
-            </a>
-        </div> -->
-
         <!--Content All-->
         <div class="content-all">
             <!--Content 1-->
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
+                    <a href="artikel_sejarah.html">
                         <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
@@ -73,7 +66,7 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
+                        <a href="artikel_sejarah.html">
                             <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                         </a>
                     </div>
@@ -93,7 +86,7 @@
             <hr>
                 <div class="content-wisata">
                     <div class="picture-content-wisata">
-                        <a href="artikel_wisata.html">
+                        <a href="artikel_sejarah.html">
                             <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                         </a>
                     </div>
@@ -107,7 +100,7 @@
                             </div>
                         </div>
                         <div class="judul-content">
-                            <a href="artikel_wisata.html">
+                            <a href="artikel_sejarah.html">
                                 <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                             </a>
                         </div>
@@ -127,7 +120,7 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
+                    <a href="artikel_sejarah.html">
                         <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
@@ -141,7 +134,7 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
+                        <a href="artikel_sejarah.html">
                             <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                         </a>
                     </div>
@@ -161,7 +154,7 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
+                    <a href="artikel_sejarah.html">
                         <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
@@ -175,10 +168,8 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
-                            <a href="artikel_wisata.html">
-                                <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
-                            </a>
+                        <a href="artikel_sejarah.html">
+                            <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                         </a>
                     </div>
                     <div class="creator-content-wisata">
@@ -197,7 +188,7 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
+                    <a href="artikel_sejarah.html">
                         <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
@@ -211,7 +202,7 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
+                        <a href="artikel_sejarah.html">
                             <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                         </a>
                     </div>
@@ -231,7 +222,7 @@
             <hr>
             <div class="content-wisata">
                 <div class="picture-content-wisata">
-                    <a href="artikel_wisata.html">
+                    <a href="artikel_sejarah.html">
                         <img src="../project_web_dasar/pict/fatahillah_sore.jpg" alt="fatahillah" srcset="">
                     </a>
                 </div>
@@ -245,7 +236,7 @@
                         </div>
                     </div>
                     <div class="judul-content">
-                        <a href="artikel_wisata.html">
+                        <a href="artikel_sejarah.html">
                             <h2>Kota Tua, Saksi Bisu Sejarah Ibukota</h2>
                         </a>
                     </div>
