benerin tombol & bikin form

--- a/form_daftar.html
+++ b/form_daftar.html
@@ -127,8 +127,8 @@
 
         <!--Berikutnya-->
         <div class="right">
-            <a class="float-right-2" href="#">
-                <input type="button" value="Berikutnya" name="next" id="next">
+            <a class="float-right-2" href="form_pesan_tiket.html">
+                <input type="button" class="button-1" value="Berikutnya →" name="next" id="next">
             </a>
         </div>
     </div>
