Changes to be committed: css/form_pesan_tiket.css, form_daftar.html, form_pesan_tiket.html, js/harga.js, js/hitung.js

--- a/form_pesan_tiket.html
+++ b/form_pesan_tiket.html
@@ -52,6 +52,45 @@
                 <li class="no-active-nomor">Selesai</li><!--Selesai-->
             </ul>
         </div>
+
+        <!--Form Pesan-->
+        <div class="formulir-daftar">
+            <form action="" class="form-daftar">
+                <div class="baris">
+                    <div class="kolom-1">
+                        <label for="nama" class="label">Nama</label>
+                    </div>
+                    <div class="kolom-2">
+                        <input class="text" type="text" name="nama" id="nama">
+                    </div>
+                </div>
+                <div class="baris">
+                    <div class="kolom-1">
+                        <label for="nik" class="label">Nomor Induk Kependudukan</label>
+                    </div>
+                    <div class="kolom-2">
+                        <input class="text" type="text" name="nik" id="nik">
+                    </div>
+                </div>
+                <div class="baris">
+                    <div class="kolom-1">
+                        <label for="wisata" class="label">Tempat Wisata</label>
+                    </div>
+                    <div class="kolom-2">
+                        <select class="text" name="wisata" id="wisata">
+                            <option value="Monumen Nasional">Monumen Nasional</option>
+                            <option value="Museum Fatahillah">Museum Fatahillah</option>
+                            <option value="Ragunan">Ragunan</option>
+                            <option value="TMII">Taman Mini Indonesia Indah</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="baris">
+                    <input class="submit" type="submit" value="Pesan Tiket">
+                </div>
+            </form>
+        </div>
+        
     </div>
 
     <!--Footer-->
