--- a/artikel_wisata.html
+++ b/artikel_wisata.html
@@ -31,8 +31,8 @@
                 <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-navigation-1-aktif">Wisata</a></li>
-                <li><a href="#" class="link-navigation-1">Rute</a></li>
-                <li><a href="#" class="link-navigation-1">Kuliner</a></li>
+                <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
+                <li><a href="kuliner.html" class="link-navigation-1">Kuliner</a></li>
             </ul>
         </div>
     </div>
