--- a/budaya.html
+++ b/budaya.html
@@ -32,11 +32,11 @@
         <div class="navigation-menu-1">
             <ul>
                 <li><a href="index.html" class="link-navigation-1">Home</a></li>
-                <li><a href="#" class="link-navigation-1">Sejarah</a></li>
+                <li><a href="sejarah.html" class="link-navigation-1">Sejarah</a></li>
                 <li><a href="budaya.html" class="link-navigation-1">Budaya</a></li>
                 <li><a href="wisata.html" class="link-navigation-1">Wisata</a></li>
-                <li><a href="#" class="link-navigation-1">Rute</a></li>
-                <li><a href="#" class="link-navigation-1">Kuliner</a></li>
+                <li><a href="rute.html" class="link-navigation-1">Rute</a></li>
+                <li><a href="kuliner.html" class="link-navigation-1">Kuliner</a></li>
             </ul>
         </div>
     </div>
